fix button on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1033,6 +1033,10 @@ label {
 .button-block {
   display: flex; }
 
+@media (max-width: 640px) {
+  .button-block {
+    display: inline-block;
+    width: 100%; } }
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
