--- a/public/scss/components/_buttons.scss
+++ b/public/scss/components/_buttons.scss
@@ -90,3 +90,10 @@
 .button-block {
     display: flex;
 }
+
+@media (max-width: 640px) {
+    .button-block {
+        display: inline-block;
+        width: 100%;
+    }
+}
